--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,21 @@
-/bassmididrv_source/*.exp
-/bassmididrv_source/*.ilk
-/bassmididrv_source/*.lib
-/bassmididrv_source/*.obj
-/bassmididrv_source/*.opensdf
-/bassmididrv_source/*.pdb
-/bassmididrv_source/*.sdf
-/bassmididrv_source/*.vcxproj.user
-/bassmididrv_source/*.suo
-/bassmididrv_source/*.user
-/bassmididrv_source/ipch
-/bassmididrv_source/x64
-/bassmididrv_source/output
-/bassmididrv_source/Release
-/bassmididrv_source/Debug
-/bassmididrv_source/out
-/bassmididrv_source/*.dll
-/bassmididrv_source/*.exe
+/driver/*.exp
+/driver/*.ilk
+/driver/*.lib
+/driver/*.obj
+/driver/*.opensdf
+/driver/*.pdb
+/driver/*.sdf
+/driver/*.vcxproj.user
+/driver/*.suo
+/driver/*.user
+/driver/ipch
+/driver/x64
+/driver/output
+/driver/Release
+/driver/Debug
+/driver/out
+/driver/*.dll
+/driver/*.exe
 /drivercfg/*.opensdf
 /drivercfg/*.sdf
 /drivercfg/*.vcxproj.user
@@ -27,16 +27,16 @@
 /drivercfg/*.dll
 /drivercfg/*.exe
 /drivercfg/x64
-/sfpacker/*.opensdf
-/sfpacker/*.sdf
-/sfpacker/*.vcxproj.user
-/sfpacker/*.suo
-/sfpacker/*.user
-/sfpacker/ipch
-/sfpacker/Release
-/sfpacker/Debug
-/sfpacker/*.dll
-/sfpacker/*.exe
+/vsthost/*.opensdf
+/vsthost/*.sdf
+/vsthost/*.vcxproj.user
+/vsthost/*.suo
+/vsthost/*.user
+/vsthost/ipch
+/vsthost/Release
+/vsthost/Debug
+/vsthost/*.dll
+/vsthost/*.exe
 /output/
 git_ver.h
-bassmididrv.exe
+vstmididrv.exe
