Important fixes and some new features
1. Removes the dependency on Bass/Basswasapi and restores standard Wave Output. 
This is important since:
a. This way you can use Midi clients that use Bass libraries without problems (FSMP, KaraFun etc.). Since VST driver is an in-process driver (actually just a dll) it cannot use its own version of Bass libraries if the client has already loaded another and vice versa. Simply you cannot have different dll versions in the same address space. 
b. This version also has more precise Midi timings due to using of timestamped Midi messages and waveOutGetPosition. The original driver version dropped timestamps so Midi precision depended on Bass update periods (5 - 10 ms at best case).
c. Because of configuration problems the driver produced huge 500 ms latency.
All the above problems are cured now,

2. Fixed the saving and restoring of plugin settings.

3. Sime other minor fixes and enhancements

--- a/driver/vstmididrv.08.vcproj
+++ b/driver/vstmididrv.08.vcproj
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="8,00"
 	Name="vstmididrv"
 	ProjectGUID="{34769F76-3AAD-4151-AD26-06ADBEBDE49B}"
 	RootNamespace="vstmididrv"
-	TargetFrameworkVersion="196613"
 	>
 	<Platforms>
 		<Platform
@@ -66,7 +65,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="dxguid.lib winmm.lib Shlwapi.lib"
+				AdditionalDependencies="winmm.lib Shlwapi.lib"
 				ShowProgress="0"
 				OutputFile="$(OutDir)\vstmididrv.dll"
 				AdditionalLibraryDirectories="$(DXSDK_DIR)lib\x86;..\external_packages\lib"
@@ -92,6 +91,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -174,6 +176,9 @@
 				Name="VCAppVerifierTool"
 			/>
 			<Tool
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
@@ -226,7 +231,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="dxguid.lib winmm.lib Shlwapi.lib"
+				AdditionalDependencies="winmm.lib Shlwapi.lib"
 				ShowProgress="0"
 				OutputFile="$(OutDir)\vstmididrv.dll"
 				AdditionalLibraryDirectories="$(DXSDK_DIR)lib\x86;..\external_packages\lib"
@@ -254,6 +259,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -309,7 +317,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="dxguid.lib winmm.lib Shlwapi.lib"
+				AdditionalDependencies="winmm.lib Shlwapi.lib"
 				ShowProgress="0"
 				OutputFile="$(OutDir)\vstmididrv.dll"
 				AdditionalLibraryDirectories="$(DXSDK_DIR)lib\x64;..\external_packages\lib64"
@@ -337,6 +345,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
