Fixed 32-bit installer problem
Fixed 32-bit installer not creating uninstaller.

--- a/installer.08.vcproj
+++ b/installer.08.vcproj
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="8,00"
 	Name="installer"
 	ProjectGUID="{021C1266-4298-48EE-8FC6-77DFEB63368F}"
+	RootNamespace="installer"
 	Keyword="MakeFileProj"
-	TargetFrameworkVersion="196613"
 	>
 	<Platforms>
 		<Platform
@@ -43,9 +43,9 @@
 			>
 			<Tool
 				Name="VCNMakeTool"
-				BuildCommandLine="nmake PF86=&quot;%ProgramFiles(x86)%&quot; /f &quot;vstmididrv.mak&quot;"
-				ReBuildCommandLine="nmake PF86=&quot;%ProgramFiles(x86)%&quot; /f &quot;vstmididrv.mak&quot; /a"
-				CleanCommandLine="nmake PF86=&quot;%ProgramFiles(x86)%&quot; /f &quot;vstmididrv.mak&quot; clean"
+				BuildCommandLine="nmake PF86=&quot;H:\Program Files (x86)&quot; /f &quot;vstmididrv.mak&quot;"
+				ReBuildCommandLine="nmake PF86=&quot;H:\Program Files (x86)&quot; /f &quot;vstmididrv.mak&quot; /a"
+				CleanCommandLine="nmake PF86=&quot;H:\Program Files (x86)&quot; /f &quot;vstmididrv.mak&quot; clean"
 				Output="vstmididrv.exe"
 				PreprocessorDefinitions="WIN32;NDEBUG"
 				IncludeSearchPath=""
