Threading and DPI related fixes
1. Fixed DPI adjustment for NT4/W2K/XP that do not use DPI virtualization.
2. Proper waiting for Editor dialog thread to close.
3. Changed File I/O functions to native Win32 (thus saved a few ten kilobytes since iostream/fstream not needed anymore).
4. Replaced unnecessary UTF conversions (utf8conv.h not needed anymore).
5. Added Copyright info.
6. Other minor fixes.

--- a/driver/vstmididrv.rc
+++ b/driver/vstmididrv.rc
@@ -76,6 +76,7 @@ BEGIN
             VALUE "OriginalFilename", "vstmididrv.dll"
             VALUE "ProductName", "VST MIDI System Synth (Falcomod)"
             VALUE "ProductVersion", stringify(VERSION_MAJOR) "." stringify(VERSION_MINOR)
+            VALUE "LegalCopyright", "kode54, Arakula, DB50XG, Falcosoft"
         END
     END
     BLOCK "VarFileInfo"
