High DPI related optimizations
1.  Added manifests for High DPI support. Since VST2 editors mostly do not handle high DPI at all the default is not aware + gdi scaling in Win10 1809+.
2.  The default DPI mode is rather compatible but DPI mode can be changed through registry (HighDpiMode key).
3. Fixed different locales of resource blocks.
4.  Other minor fixes.

--- a/drivercfg/drivercfg.vcxproj
+++ b/drivercfg/drivercfg.vcxproj
@@ -70,6 +70,7 @@
     <LinkIncremental>false</LinkIncremental>
     <LibraryPath>$(LibraryPath)</LibraryPath>
     <IncludePath>$(SolutionDir)wtl\include;$(IncludePath)</IncludePath>
+    <GenerateManifest>false</GenerateManifest>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IntDir>Release</IntDir>
@@ -77,6 +78,7 @@
     <LinkIncremental>false</LinkIncremental>
     <LibraryPath>$(LibraryPath)</LibraryPath>
     <IncludePath>$(SolutionDir)wtl\include;$(IncludePath)</IncludePath>
+    <GenerateManifest>false</GenerateManifest>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>$(SolutionDir)wtl\include;$(IncludePath)</IncludePath>
