Added Readme.html and some fixes
1. Added Readme.html
2. Versioning related fixes.
3. Changed installer to put shortcuts into All Users instead of current one.

--- a/driver/vstmididrv.rc
+++ b/driver/vstmididrv.rc
@@ -73,7 +73,7 @@ BEGIN
             VALUE "FileVersion", stringify(VERSION_MAJOR) "." stringify(VERSION_MINOR) "." stringify(VERSION_PATCH) "." stringify(VERSION_BUILD)
             VALUE "OriginalFilename", "vstmididrv.dll"
             VALUE "ProductName", "VST MIDI System Synth (Falcomod)"
-            VALUE "ProductVersion", stringify(VERSION_MAJOR) "." stringify(VERSION_MINOR)
+            VALUE "ProductVersion", stringify(VERSION_MAJOR) "." stringify(VERSION_MINOR) "." stringify(VERSION_PATCH)
             VALUE "LegalCopyright", "kode54, Arakula, DB50XG, Falcosoft"
         END
     END
