--- a/vsthost/vsthost.08.vcproj
+++ b/vsthost/vsthost.08.vcproj
@@ -63,7 +63,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="comctl32.lib"
-				OutputFile="$(OutDir)\vsthost32.exe"
+				OutputFile="$(OutDir)\vstbridgeapp32.exe"
 				GenerateDebugInformation="true"
 				TargetMachine="1"
 			/>
@@ -90,7 +90,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="if not exist &quot;$(TargetDir)..\x64\$(ConfigurationName)&quot; md &quot;$(TargetDir)..\x64\$(ConfigurationName)&quot;&#x0D;&#x0A;copy /y &quot;$(TargetDir)vsthost32.exe&quot; &quot;$(TargetDir)..\x64\$(ConfigurationName)\&quot;&#x0D;&#x0A;copy /y &quot;$(TargetDir)vsthost32.pdb&quot; &quot;$(TargetDir)..\x64\$(ConfigurationName)\&quot;&#x0D;&#x0A;"
+				CommandLine="if not exist &quot;$(TargetDir)..\x64\$(ConfigurationName)&quot; md &quot;$(TargetDir)..\x64\$(ConfigurationName)&quot;&#x0D;&#x0A;copy /y &quot;$(TargetDir)vstbridgeapp32.exe&quot; &quot;$(TargetDir)..\x64\$(ConfigurationName)\&quot;&#x0D;&#x0A;copy /y &quot;$(TargetDir)vstbridgeapp32.pdb&quot; &quot;$(TargetDir)..\x64\$(ConfigurationName)\&quot;&#x0D;&#x0A;"
 			/>
 		</Configuration>
 		<Configuration
@@ -140,7 +140,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="comctl32.lib"
-				OutputFile="$(OutDir)\vsthost64.exe"
+				OutputFile="$(OutDir)\vstbridgeapp64.exe"
 				GenerateDebugInformation="true"
 				TargetMachine="17"
 			/>
@@ -167,7 +167,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="if not exist &quot;$(TargetDir)..\..\$(ConfigurationName)\&quot; md &quot;$(TargetDir)..\..\$(ConfigurationName)&quot;&#x0D;&#x0A;copy /y &quot;$(TargetDir)vsthost64.exe&quot; &quot;$(TargetDir)..\..\$(ConfigurationName)\&quot;&#x0D;&#x0A;copy /y &quot;$(TargetDir)vsthost64.pdb&quot; &quot;$(TargetDir)..\..\$(ConfigurationName)\&quot;&#x0D;&#x0A;"
+				CommandLine="if not exist &quot;$(TargetDir)..\..\$(ConfigurationName)\&quot; md &quot;$(TargetDir)..\..\$(ConfigurationName)&quot;&#x0D;&#x0A;copy /y &quot;$(TargetDir)vstbridgeapp64.exe&quot; &quot;$(TargetDir)..\..\$(ConfigurationName)\&quot;&#x0D;&#x0A;copy /y &quot;$(TargetDir)vstbridgeapp64.pdb&quot; &quot;$(TargetDir)..\..\$(ConfigurationName)\&quot;&#x0D;&#x0A;"
 			/>
 		</Configuration>
 		<Configuration
@@ -217,7 +217,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="comctl32.lib"
-				OutputFile="..\output\vsthost32.exe"
+				OutputFile="..\output\vstbridgeapp32.exe"
 				AdditionalLibraryDirectories=""
 				GenerateManifest="false"
 				GenerateDebugInformation="true"
@@ -298,7 +298,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="comctl32.lib"
-				OutputFile="..\output\64\vsthost64.exe"
+				OutputFile="..\output\64\vstbridgeapp64.exe"
 				GenerateManifest="false"
 				GenerateDebugInformation="true"
 				OptimizeReferences="2"
